Fix SVG z-index CVG

--- a/src/styles/pages/legal/_cgv.scss
+++ b/src/styles/pages/legal/_cgv.scss
@@ -6,6 +6,7 @@
         height: 180%;
         overflow: hidden;
         position: absolute;
+        z-index: -1;
     
         img {
             position: relative;
@@ -26,6 +27,7 @@
         height: 180%;
         overflow: hidden;
         position: absolute;
+        z-index: -1;
     
         img {
             position: relative;
